--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ python = ">=3.8,<3.11"
 click = "*"
 rframe = "^0.1.11"
 utilix = "^0.6.7"
+rich = "^12.0.1"
 
 [tool.poetry.dev-dependencies]
 bumpversion = "*"
