--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ click = "*"
 rframe = "^0.1.11"
 utilix = "^0.6.7"
 rich = "^12.0.1"
+pandas = "^1.4.1"
 
 [tool.poetry.dev-dependencies]
 bumpversion = "*"
