--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ black = "^22.1.0"
 pytest-cov = "^3.0.0"
 hypothesis = "^6.39.4"
 autodoc-pydantic = "^1.6.1"
+jupyterlite-sphinx = "^0.4.6"
 
 [tool.poetry.scripts]
 xedocs = 'xedocs.cli:main'
