--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -6,13 +6,17 @@ version: 2
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
+  builder: html
   configuration: docs/conf.py
 
 build:
   os: ubuntu-20.04
   tools:
     python: mambaforge-4.10
-    
-python:
-   install:
-   - requirements: docs/requirements.txt
+
+conda:
+  environment: docs/environment.yml
+
+# python:
+#    install:
+#    - requirements: docs/requirements.txt
