--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ pytest-cov = "^3.0.0"
 hypothesis = "^6.39.4"
 autodoc-pydantic = "^1.6.1"
 jupyterlite-sphinx = "^0.4.6"
+sphinxext-rediraffe = "^0.2.7"
 
 [tool.poetry.scripts]
 xedocs = 'xedocs.cli:main'
