--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -1,5 +1,5 @@
-name: jupyterlite-docs
-# this is a conda/mamba environment for building the JupyterLite documentation
+name: xedocs-docs
+# this is a conda/mamba environment for building the xedocs documentation
 
 channels:
   - conda-forge
@@ -44,12 +44,12 @@ dependencies:
   - jupyterlab_server >=2.8.1,<3
   ### DOCS ENV ###
   - pip:
-      - xedocs
-      - utilix
-      - pandas
-      - numpydoc
-      - sphinx
-      - sphinx-material
-      - nbsphinx
-      - autodoc-pydantic
-      - jupyterlite-sphinx
+    - xedocs
+    - utilix
+    - pandas
+    - numpydoc
+    - sphinx
+    - sphinx-material
+    - nbsphinx
+    - autodoc-pydantic
+    - jupyterlite-sphinx
