--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ click = "*"
 rframe = "^0.1.16"
 rich = "^12.0.1"
 pandas = "*"
+pydantic-panel = "^0.1.2"
 
 [tool.poetry.dev-dependencies]
 bumpversion = "*"
