--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,8 +22,8 @@ python = ">=3.8,<3.11"
 click = "*"
 rframe = "^0.1.16"
 rich = "^12.0.1"
-pandas = "*"
-pydantic-panel = "^0.1.2"
+pydantic-panel = "^0.1.5"
+
 
 [tool.poetry.dev-dependencies]
 bumpversion = "*"
@@ -44,6 +44,8 @@ hypothesis = "^6.39.4"
 autodoc-pydantic = "^1.6.1"
 jupyterlite-sphinx = "^0.4.6"
 sphinxext-rediraffe = "^0.2.7"
+pymongo = "<4.0.0"
+utilix = "^0.7.0"
 
 [tool.poetry.scripts]
 xedocs = 'xedocs.cli:main'
