--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ classifiers=[
     'Intended Audience :: Developers',
     'Natural Language :: English',
     'Programming Language :: Python :: 3.8',
+    'Programming Language :: Python :: 3.9',
+    'Programming Language :: Python :: 3.10',
 ]
 packages = [
     { include = "xedocs" },
@@ -22,7 +24,13 @@ python = ">=3.8,<3.11"
 click = "*"
 rich = "*"
 rframe = "^0.1.19"
+pydantic-panel = {version = "^0.1.8", optional = true}
+pymongo = {version = "*", optional = true}
 
+[tool.poetry.extras]
+gui = ["pydantic-panel"]
+db = ["pymongo"]
+all = ["gui", "db"]
 
 [tool.poetry.dev-dependencies]
 bumpversion = "*"
