--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -1,6 +1,6 @@
 name: CI
 
-on: [push, pull_request]
+on: pull_request
 
 jobs:
 
@@ -8,8 +8,8 @@ jobs:
     name: Run tests
     strategy:
       matrix:
-        os: [Ubuntu]
-        python-version: ['3.7', '3.8', '3.9', '3.10']
+        os: Ubuntu
+        python-version: [ '3.8', '3.9', '3.10']
     runs-on: ${{ matrix.os }}-latest
     steps:
       - name: Git checkout
