--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,9 @@ click = "*"
 rich = "*"
 rframe = "^0.2.0"
 pymongo = {version = "*", optional = true}
+appdirs = "^1.4.4"
+tinydb = "^4.7.0"
+tqdm = "^4.64.1"
 
 [tool.poetry.extras]
 db = ["pymongo"]
