--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,15 +61,12 @@ xedocs = 'xedocs.cli:main'
 [tool.poetry.plugins."straxen"]
 "xedocs_protocol" = "xedocs._straxen_plugin"
 
-[tool.poetry.plugins."xedocs"]
-"analyst_db_api" = "xedocs.datasources.api:analyst_db_api_source"
-"straxen_db_api" = "xedocs.datasources.api:straxen_db_api_source"
-"straxen_db" = "xedocs.datasources.utilix:straxen_db_source"
-"analyst_db" = "xedocs.datasources.utilix:analyst_db_source"
-"analyst_db_github" = "xedocs.datasources.github:analyst_db_api_source"
-"straxen_db_github" = "xedocs.datasources.github:straxen_db_api_source"
-"analyst_db_local" = "xedocs.datasources.local:analyst_db_local_source"
-"straxen_db_local" = "xedocs.datasources.local:straxen_db_local_source"
+[tool.poetry.plugins."xedocs_db_interfaces"]
+"api" = "xedocs.databases.api:APIDatabase"
+"utilix" = "xedocs.databases.utilix:UtilixDatabase"
+"github" = "xedocs.databases.github:GithubDatabase"
+"local_repo" = "xedocs.databases.local:LocalRepoDatabase"
+"mongo" = "xedocs.databases.mongo:MongoDatabase"
 
 [build-system]
 requires = ["poetry-core>=1.0.8", "setuptools"]
