--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ appdirs = "^1.4.4"
 tinydb = "^4.7.0"
 tqdm = "^4.64.1"
 xeauth = "^0.2.3"
+pyyaml = "^6.0"
 
 [tool.poetry.extras]
 db = ["pymongo"]
