--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ tinydb = "^4.7.0"
 tqdm = "^4.64.1"
 xeauth = "^0.2.3"
 pyyaml = "^6.0"
+parse = "^1.19.1"
 
 [tool.poetry.extras]
 db = ["pymongo"]
