--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,23 +20,23 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.9,<4.0"
+python = ">=3.9,<3.13"
 click = "*"
 rich = "*"
-rframe = "^0.2.22"
+rframe = "^0.2.23"
 pymongo = {version = "*", optional = true}
 appdirs = "^1.4.4"
-tinydb = "^4.7.0"
-tqdm = "^4.64.1"
+tinydb = "^4.8.2"
+tqdm = "^4.67.1"
 xeauth = "^0.2.3"
 pyyaml = "^6.0"
-parse = "^1.19.1"
+parse = "^1.20.2"
 
 [tool.poetry.extras]
 db = ["pymongo"]
 all = ["db"]
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 bumpversion = "*"
 coverage = "*"
 flake8 = "*"
