--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ tqdm = "^4.67.1"
 xeauth = "^0.2.3"
 pyyaml = "^6.0"
 parse = "^1.20.2"
-utilix = "^0.12.0"
+utilix = "*"
 
 [tool.poetry.extras]
 db = ["pymongo"]
